--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -291,66 +291,66 @@
         </section>
     </main>
 
-    <footer class="footer">
-        <div class="footer__container container">
-            <div class="footer__logo-adress-container">
-                <a class="footer__logo logo link" href="index.html">
-                    <span class="logo__web">Web</span><span class="logo__footer-studio">Studio</span>
-                </a>
-                <address class="footer__adress-container">
-                    <p class="footer__adress-p">г. Киев, пр-т Леси Украинки, 26</p>
-                    <a class="footer__mail-a link" href="mailto:info@example.com">info@example.com</a><br>
-                    <a class="footer__phone-a link" href="tel:+3809911111">+38 099 111 11 11</a>
-                </address>
-            </div>
-            <div class="footer__join-container">
-                <p class="footer__join-force">ПРИСОЕДИНЯЙТЕСЬ</p>
-                <ul class="footer__social-links-list list">
-                    <li class="social-li">
-                        <a href="" class="social-link footer__social-link join-us-social-list-link-bg">
-                            <svg class="social-icon footer__social-icon">
-                                <use href="./images/sprite.svg#icon-instagram-svg"></use>
-                            </svg>
+        <footer class="footer">
+                <div class="footer__container container">
+                    <div class="footer__logo-adress-container">
+                        <a class="footer__logo logo link" href="index.html">
+                            <span class="logo__web">Web</span><span class="logo__footer-studio">Studio</span>
                         </a>
-                    </li>
-                    <li class="social-li">
-                        <a href="" class="social-link footer__social-link">
-                            <svg class="social-icon footer__social-icon">
-                                <use href="./images/sprite.svg#icon-twitter-svg"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-li">
-                        <a href="" class="social-link footer__social-link">
-                            <svg class="social-icon footer__social-icon">
-                                <use href="./images/sprite.svg#icon-facebook-svg"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-li">
-                        <a href="" class="social-link footer__social-link">
-                            <svg class="social-icon footer__social-icon">
-                                <use href="./images/sprite.svg#icon-linkedin-svg"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer__subscribe-container">
-                <p class="footer__subscribe-force">ПОДПИШИСЬ НА РАССЫЛКУ</p>
-                <div class="footer__form-button-container">
-                    <form action="#" class="footer__mail-form">
-                        <input type="email" name="user-mail" class="footer__mail-input" placeholder="E-mail">
-                    </form>
-                    <div class="footer__button-icon-container">
-                        <button type="submit" class="footer__button major-button-component">Подписаться</button>
-                        <svg class="footer__button-icon">
-                            <use href="./images/sprite.svg#icon-send-svg"></use>
-                        </svg>
+                        <address class="footer__adress-container">
+                            <p class="footer__adress">г. Киев, пр-т Леси Украинки, 26</p>
+                            <a class="footer__mail link" href="mailto:info@example.com">info@example.com</a><br>
+                            <a class="footer__phone link" href="tel:+3809911111">+38 099 111 11 11</a>
+                        </address>
+                    </div>
+                    <div class="footer__join-container">
+                        <p class="footer__join-force">ПРИСОЕДИНЯЙТЕСЬ</p>
+                        <ul class="footer__social-links-list list">
+                            <li class="social-li">
+                                <a href="" class="social-link footer__social-link join-us-social-list-link-bg">
+                                    <svg class="social-icon footer__social-icon">
+                                        <use href="./images/sprite.svg#icon-instagram-svg"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-li">
+                                <a href="" class="social-link footer__social-link">
+                                    <svg class="social-icon footer__social-icon">
+                                        <use href="./images/sprite.svg#icon-twitter-svg"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-li">
+                                <a href="" class="social-link footer__social-link">
+                                    <svg class="social-icon footer__social-icon">
+                                        <use href="./images/sprite.svg#icon-facebook-svg"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-li">
+                                <a href="" class="social-link footer__social-link">
+                                    <svg class="social-icon footer__social-icon">
+                                        <use href="./images/sprite.svg#icon-linkedin-svg"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__subscribe-container">
+                        <p class="footer__subscribe-force">ПОДПИШИСЬ НА РАССЫЛКУ</p>
+                        <div class="footer__form-button-container">
+                            <form action="#" class="footer__mail-form">
+                                <input type="email" name="user-mail" class="footer__mail-input" placeholder="E-mail">
+                            </form>
+                            <div class="footer__button-icon-container">
+                                <button type="submit" class="footer__button major-button-component">Подписаться</button>
+                                <svg class="footer__button-icon">
+                                    <use href="./images/sprite.svg#icon-send-svg"></use>
+                                </svg>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 </html>
